--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:title" content="AKB design | site officiel"/>
-    <meta property="og:url" content="https://akbdesign.go.yj.fr/#home"/>
-    <meta property="og:image" content="https://akbdesign.go.yj.fr/img/projets/akb.jpg"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="AKB design | site officiel" />
+    <meta property="og:url" content="https://akbdesign.go.yj.fr/#home" />
+    <meta property="og:image" content="https://akbdesign.go.yj.fr/img/projets/akb.jpg" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
     <meta property="og:image:alt" content="Logo de AKB DESIGN" />
-    <meta property="og:site_name" content="akbdesign"/>
-    <meta property="og:local" content="fr_FR"/>
+    <meta property="og:site_name" content="akbdesign" />
+    <meta property="og:local" content="fr_FR" />
     <meta property="og:description" content="Graphiste avec plus de 6 ans d'experience,
         j'ai eu du plaisir à travailler sur des projets de design variés tant que par les
-        secteurs que par les objectifs"/>
+        secteurs que par les objectifs" />
 
     <link href="img/icon.png" rel="icon">
     <link href="img/icon.png" rel="apple-touch-icon">
@@ -124,7 +124,173 @@
             </div>
         </div>
     </div>
+    <div class="w-100 about mt-8" id="about" data-aos="fade-up">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center">
+                    <nav class="titre text-3xl mt-8">Apropos</nav>
+                    <span class="ligne"></span>
+                </div>
+                <div class="col-md-6 d-flex align-center justify-content-center" data-aos="zoom-in">
+                    <div>
+                        <img src="img/moi.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6" data-aos="fade-up">
+                    <div>
+                        <p class="mb-3 motive">Graphiste avec plus de 6 ans d'experience,
+                            j'ai eu du plaisir à travailler sur des projets de design variés tant que par les
+                            secteurs que par les objectifs ( <span style="color: rgb(255, 183, 0);">Création d'identité
+                                visuelle, édition, print, montage vidéo et animation </span>) qui m'ont permis d'avoir
+                            une vision complète de la création graphique et de développer mon sens du design.</p>
 
+                        <p class="mt-3 mb-3 motive">Motivé et curieux, je serai ravi d'échanger
+                            avec vous pour comprendre comment mon design pourrait contribuer à votre
+                            dévéloppement</p>
+                        <p class=""><strong><span style="color: rgb(255, 183, 0);">Plus de
+                                    250</span></strong> projets réalisés</p>
+                    </div>
+                    <p class="col-md-12 text-center" data-aos="zoom-in"><a href="dowloand.php"
+                            class="download nav-link mt-3">Télécharger
+                            mon CV</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="w-100 experience mt-8" id="experience" data-aos="fade-up">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center mb-6">
+                    <nav class="titre text-3xl mt-8">Expériences</nav>
+                    <span class="ligne"></span>
+                </div>
+
+                <div class=" libele col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
+                    <p class="col-xl-10 col-lg-10 col-md-10 col-sm-10">
+                        Un resumé détaillé de mes expériences acquises au fil du temps dans ce beau et passionant
+                        domaine de l'infographie et de l'expérience utilisteur
+                    </p>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="detail">
+                        <p class="periode">2016</p>
+                        <p class="lieu">Cecontec</p>
+                        <p class="poste">formation sur le design</p>
+                        <p class="desc">Obtention d'un brevet suite à une formation sur l'initiation à l'infographie, à
+                            la comprehension de l'experience utilisteur UI/UX et les autres modules.</p>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+                    <div class="detail">
+                        <p class="periode">2018-Aujourd'hui</p>
+                        <p class="lieu">Freelance</p>
+                        <p class="poste">Graphic & Motion designer</p>
+                        <p class="desc">À travers les experiences acquises, je propose plusieurs services adaptés pour
+                            vous aidez à passer vos informations aussi facilement qu'éfficacement.</p>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+                    <div class="detail">
+                        <p class="periode">2017-2021</p>
+                        <p class="lieu">Université de Kinshasa</p>
+                        <p class="poste">Etudiant en informatique</p>
+                        <p class="desc">Obtention d'un diplôme de graduat en informatique afin de repondre de plus en
+                            plus à vos exigences.</p>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+                    <div class="detail">
+                        <p class="periode">2019-Aujourd'hui</p>
+                        <p class="lieu">Tekscap IT</p>
+                        <p class="poste">Graphic & Motion designer</p>
+                        <p class="desc">Je propose les meilleures solutions adaptées aux objectifs poursuivis par
+                            TEKSCAP IT afin de propulser leur image de marque et d'élargir leur zone de couverture.</p>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="detail">
+                        <p class="periode">2020-2022</p>
+                        <p class="lieu">Ciné Retro</p>
+                        <p class="poste">Graphic & Motion designer</p>
+                        <p class="desc">Je propose les meilleures solutions adaptées aux objectifs poursuivis par CINÉ
+                            RETRO afin de propulser leur image de marque et d'élargir leur zone de couverture.</p>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+                    <div class="detail">
+                        <p class="periode">2021-Aujourd'hui</p>
+                        <p class="lieu">Optimus corp</p>
+                        <p class="poste">Graphic & Motion designer</p>
+                        <p class="desc">Je propose les meilleures solutions adaptées aux objectifs poursuivis par
+                            OPTIMUS CORP afin de propulser leur image de marque et d'élargir leur zone de couverture.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="w-100 service mt-8" id="service" data-aos="fade-up">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center mb-6">
+                    <nav class="titre text-3xl mt-8">Services</nav>
+                    <span class="ligne"></span>
+                </div>
+                <div class=" libele col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
+                    <p class="col-xl-10 col-lg-10 col-md-10 col-sm-10">
+                        Un resumé détaillé des services ocroyés pour mieux répondre aux besions de ma clientèle afin
+                        d'avoir une image de marque et une identité digitale propre à eux
+                    </p>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="detail mb-6">
+                        <div class="col-md-12 text-center" data-aos="zoom-in" data-aos-delay="200">
+                            <span class="fa fa-video text-4xl p-4 m-3"></span>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <nav class="titre text-lg mt-4">Montage vidéo</nav>
+                            <span class="ligne"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+                    <div class="detail mb-6">
+                        <div class="col-md-12 text-center" data-aos="zoom-in" data-aos-delay="300">
+                            <span class="far fa-snowflake text-4xl p-4 m-3"></span>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <nav class="titre text-lg mt-4">Flyers</nav>
+                            <span class="ligne"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+                    <div class="detail mb-6">
+                        <div class="col-md-12 text-center" data-aos="zoom-in" data-aos-delay="400">
+                            <span class="fa fa-film text-4xl p-4 m-3"></span>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <nav class="titre text-lg mt-4">Animation</nav>
+                            <span class="ligne"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+                    <div class="detail mb-6">
+                        <div class="col-md-12 text-center" data-aos="zoom-in" data-aos-delay="500">
+                            <span class="fa fa-icons text-4xl p-4 m-3"></span>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <nav class="titre text-lg mt-4">Logo & Icons</nav>
+                            <span class="ligne"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <a href="#" class="retour-btn"><span class="fa fa-chevron-up"></span></a>
 
