competence, realisation, client

--- a/index.html
+++ b/index.html
@@ -292,6 +292,311 @@
         </div>
     </div>
 
+
+
+    <div class="w-100 competence mt-8" id="competence" data-aos="fade-up">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-xl-10 text-center mb-6">
+                    <nav class="titre text-3xl mt-8">Compétence</nav>
+                    <span class="ligne"></span>
+                </div>
+                <div class=" libele col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
+                    <p class="col-xl-10 col-lg-10 col-md-10 col-sm-10">
+                        Un resumé détaillé de mes compétences acquises au fil du temps dans ce beau et passionant
+                        domaine de l'informatique en général et l'infographie en particulier
+                    </p>
+                </div>
+                <div class="col-xl-5 col-md-6 col-sm-12 bef-skills" data-aos="fade-up">
+                    <div class="col-xl-12">
+                        <div class="col-xl-12 skills">
+                            <div>
+                                <img src="img/skills/icons8-adobe-photoshop.gif" alt="">
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-info" role="progressbar"
+                                    style="width: 95%; color: rgb(255, 183, 0);" aria-valuenow="95" aria-valuemin="0"
+                                    aria-valuemax="100"></div>
+                            </div>
+                            <div class="text-lg" style="color: rgb(255, 183, 0);">
+                                <strong> 95%</strong>
+                            </div>
+                        </div>
+                        <div class="col-xl-12 skills">
+                            <div>
+                                <img src="img/skills/icons8-adobe-illustrator.gif" alt="">
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-info" role="progressbar"
+                                    style="width: 80%; color: rgb(255, 183, 0);" aria-valuenow="80" aria-valuemin="0"
+                                    aria-valuemax="100"></div>
+                            </div>
+                            <div class="text-lg" style="color: rgb(255, 183, 0);">
+                                <strong> 80%</strong>
+                            </div>
+                        </div>
+                        <div class="col-xl-12 skills">
+                            <div>
+                                <img src="img/skills/icons8-adobe-after-effects.gif" alt="">
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-info" role="progressbar"
+                                    style="width: 90%; color: rgb(255, 183, 0);" aria-valuenow="90" aria-valuemin="0"
+                                    aria-valuemax="100"></div>
+                            </div>
+                            <div class="text-lg" style="color: rgb(255, 183, 0);">
+                                <strong> 90%</strong>
+                            </div>
+                        </div>
+                        <div class="col-xl-12 skills">
+                            <div>
+                                <img src="img/skills/icons8-adobe-indesign.gif" alt="">
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-info" role="progressbar"
+                                    style="width: 60%; color: rgb(255, 183, 0);" aria-valuenow="60" aria-valuemin="0"
+                                    aria-valuemax="100"></div>
+                            </div>
+                            <div class="text-lg" style="color: rgb(255, 183, 0);">
+                                <strong> 60%</strong>
+                            </div>
+                        </div>
+                        <div class="col-xl-12 skills">
+                            <div>
+                                <img src="img/skills/icons8-adobe-premiere-pro.gif" alt="">
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-info" role="progressbar"
+                                    style="width: 85%; color: rgb(255, 183, 0);" aria-valuenow="85" aria-valuemin="0"
+                                    aria-valuemax="100"></div>
+                            </div>
+                            <div class="text-lg" style="color: rgb(255, 183, 0);">
+                                <strong> 85%</strong>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-5 col-md-6 col-sm-12 moi_photo1" data-aos="fade-up">
+                    <img src="img/Cover.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-100 realisation" id="realisation" data-aos="fade-up">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-xl-12 text-center">
+                    <nav class="titre text-3xl mt-8">Réalisations</nav>
+                    <span class="ligne"></span>
+                </div>
+                <div class=" libele col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
+                    <p class="col-xl-10 col-lg-10 col-md-10 col-sm-10">
+                        Quelque(s) produit(s) réalisés pour répondre aux exigences et besions de ma clientèle par
+                        rapport à leur image de marque, leurs annoces et leur identité digitale
+                    </p>
+                </div>
+                <ul class="box-container justify-content-center p-3">
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/1.jpg" class="glightbox">
+                                <img src="img/projets/1.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/2.jpg" class="glightbox">
+                                <img src="img/projets/2.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/3.jpg" class="glightbox">
+                                <img src="img/projets/3.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/4.jpg" class="glightbox">
+                                <img src="img/projets/4.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/Cover.jpg" class="glightbox">
+                                <img src="img/Cover.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/5.jpg" class="glightbox">
+                                <img src="img/projets/5.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/6.jpg" class="glightbox">
+                                <img src="img/projets/6.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/7.jpg" class="glightbox">
+                                <img src="img/projets/7.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/8.jpg" class="glightbox">
+                                <img src="img/projets/8.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/9.jpg" class="glightbox">
+                                <img src="img/projets/9.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/10.jpg" class="glightbox">
+                                <img src="img/projets/10.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/11.jpg" class="glightbox">
+                                <img src="img/projets/11.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/makarios.mp4" class="glightbox">
+                                <img src="img/projets/video.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/akbdesign.mp4" class="glightbox">
+                                <img src="img/projets/akb.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/askip.mp4" class="glightbox">
+                                <img src="img/projets/askip.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="box show">
+                        <div class="inner">
+                            <a href="img/projets/cepd.mp4" class="glightbox">
+                                <img src="img/projets/cepd.jpg" alt="image">
+                            </a>
+                        </div>
+                    </li>
+
+            </div>
+            </ul>
+        </div>
+    </div>
+    </div>
+    <div class="w-100 client" id="client" data-aos="fade-up">
+        <div class="container">
+            <div class="">
+                <div class="col-md-12 text-center">
+                    <nav class="titre text-3xl mt-8">Partenairs</nav>
+                    <span class="ligne"></span>
+                </div>
+                <div class=" libele col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
+                    <p class="col-xl-10 col-lg-10 col-md-10 col-sm-10">
+                        Présentation de mes parteairs satisfait du travail que j'ai pu réalisé pour leur image de marque
+                        ou/et leur identité digitale de l'entreprise
+                    </p>
+                </div>
+                <div class="cli row">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="100">
+                        <div class="pad">
+                            <img src="img/clients/c.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="200">
+                        <div class="pad">
+                            <img src="img/clients/d.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="300">
+                        <div class="pad">
+                            <img src="img/clients/e.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="400">
+                        <div class="pad">
+                            <img src="img/clients/f.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="500">
+                        <div class="pad">
+                            <img src="img/clients/g.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="600">
+                        <div class="pad">
+                            <img src="img/clients/h.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="100">
+                        <div class="pad">
+                            <img src="img/clients/i.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="200">
+                        <div class="pad">
+                            <img src="img/clients/j.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="300">
+                        <div class="pad">
+                            <img src="img/clients/k.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="400">
+                        <div class="pad">
+                            <img src="img/clients/l.JPG" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="500">
+                        <div class="pad">
+                            <img src="img/clients/a.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mar" data-aos="fade-up" data-aos-delay="600">
+                        <div class="pad">
+                            <img src="img/clients/b.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <a href="#" class="retour-btn"><span class="fa fa-chevron-up"></span></a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
