temoignage, contact, footer

--- a/index.html
+++ b/index.html
@@ -292,8 +292,6 @@
         </div>
     </div>
 
-
-
     <div class="w-100 competence mt-8" id="competence" data-aos="fade-up">
         <div class="container">
             <div class="row justify-content-center">
@@ -596,7 +594,295 @@
             </div>
         </div>
     </div>
-
+    <div class="w-100 temoignage p-3" id="temoignage" data-aos="fade-up">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <nav class="titre text-3xl mt-8">Témoignages</nav>
+                    <span class="ligne"></span>
+                </div>
+                <div class=" libele col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
+                    <p class="col-xl-10 col-lg-10 col-md-10 col-sm-10">
+                        Quelque temoignage des clients satisfait du travail que j'ai pu réalisé pour leur
+                        image de marque ou/et leur identité digitale de l'entreprise
+                    </p>
+                </div>
+                <div class="slickCaroussel">
+                    <div>
+                        <div class="detail">
+                            <div class="col-md-12 text-center">
+                                <span class="fa fa-quote-right text-4xl m-3"></span>
+                            </div>
+                            <div class="col-md-12">
+                                <div>
+                                    <p class="desc">AKB DESIGN, une entreprise qui ocroit les services graphiques pour
+                                        votre image de marque et votre identité digtale, avec une qualité supérieure, et
+                                        qui exécute des projets dans le plus bref délai. Je vous recommande vivement.
+                                        Faites confiance pour vos affiches, spots publicitaires, montage vidéo, etc...
+                                        la solution se trouve chez AKB DESIGN.</p>
+                                    <div class="text-right">
+                                        <small class="text-md" style="color: rgb(255, 183, 0);">~ David EYOBI</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="detail">
+                            <div class="col-md-12 text-center">
+                                <span class="fa fa-quote-right text-4xl m-3"></span>
+                            </div>
+                            <div class="col-md-12">
+                                <div>
+                                    <p class="desc">Le groupe AKB DESIGN propose dépuis plus de 3 ans de nombreux
+                                        services
+                                        dans le monde graphique et nous sommes très satisfait du niveau d'expertise
+                                        apporté par l'entreprise AKB DESIGN, tant sur les aspects de conseil techniques
+                                        ou fonctionnels que dans la réalisation. je vous recommande vivement de faire
+                                        confiance à AKB DESIGN pour votre image de marque et votre identité numérique.
+                                    </p>
+                                    <div class="text-right">
+                                        <small class="text-md" style="color: rgb(255, 183, 0);">~ Jérémie NKAN</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="detail">
+                            <div class="col-md-12 text-center">
+                                <span class="fa fa-quote-right text-4xl m-3"></span>
+                            </div>
+                            <div class="col-md-12">
+                                <div>
+                                    <p class="desc">Je vous recommande AKB DESIGN avec un service de qualité, sérieux,
+                                        disponible et professionel
+                                    </p>
+                                    <div class="text-right">
+                                        <small class="text-md" style="color: rgb(255, 183, 0);">~Mme Bijou KABANJA (CEO
+                                            Sherehe)</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="detail">
+                            <div class="col-md-12 text-center">
+                                <span class="fa fa-quote-right text-4xl m-3"></span>
+                            </div>
+                            <div class="col-md-12">
+                                <div>
+                                    <p class="desc">Je suis vraiment contente du travail effectué par l'entreprise AKB
+                                        DESIGN pour mon image de marque et mon identité digitale en respectant le cahier
+                                        de charge démandé et met un point d'honneur sur le délai de livraison. Je vous
+                                        recommande vivement de faire aussi confiance à AKB DESIGN comme moi pour vos
+                                        affiches, spots
+                                        publicitaires, Flyers et bien autres produits de bonne qualité.</p>
+                                    <div class="text-right">
+                                        <small class="text-md" style="color: rgb(255, 183, 0);">~ Loïs MWANZA</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="detail">
+                            <div class="col-md-12 text-center">
+                                <span class="fa fa-quote-right text-4xl m-3"></span>
+                            </div>
+                            <div class="col-md-12">
+                                <div>
+                                    <p class="desc">Personnelement, AKB DESIGN travaille dur pour permettre à ce que
+                                        nous
+                                        puissons réaliser nos objectifs, l'équipe toute entière bénéficie de son
+                                        travail acharné et grâce à cela nous avançons plus rapidement dans notre mission
+                                        à court, moyen et long terme et dépassons les objectifs fixés. Je vous
+                                        recommende de faire confiance à AKB DESIGN pour votre image de marque et votre
+                                        identité digitale.</p>
+                                    <div class="text-right">
+                                        <small class="text-md" style="color: rgb(255, 183, 0);">~ Geedoo Kanda(Optimus
+                                            corp)</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="detail">
+                            <div class="col-md-12 text-center">
+                                <span class="fa fa-quote-right text-4xl m-3"></span>
+                            </div>
+                            <div class="col-md-12">
+                                <div>
+                                    <p class="desc">Les visuels livrés par AKB DESIGN sont presque parfaits. Il nous
+                                        suffit de décrire les éléments et l'effet voulu, il se charge de la conception
+                                        comme si il lisait dans nos pensées et plus le livraison se fait en temps
+                                        reccord ce qui rend notre marketing et encore plus éffecace... sur ce je vous
+                                        recommande AKB DESIGN pour votre entreprise
+                                    </p>
+                                    <div class="text-right">
+                                        <small class="text-md" style="color: rgb(255, 183, 0);">~ Kev kumumangi (Jeune
+                                            educ)</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-100 contact" id="contact" data-aos="fade-up">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center">
+                    <nav class="titre text-3xl mt-8">Contact</nav>
+                    <span class="ligne mb-6"></span>
+                </div>
+                <div class=" libele col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
+                    <p class="col-xl-10 col-lg-10 col-md-10 col-sm-10">
+                        Pour plus de question ou préoccupation, voici mes coordonnées qui vous permettront de me joindre
+                    </p>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 mb-8 " data-aos="fade-up" data-aos-delay="100">
+                    <div class="detail text-center" data-aos="zoom-in" data-aos-delay="200">
+                        <span class="fa fa-map-signs text-2xl p-4" style="background-color: rgb(17, 21, 31);border-radius: 50%;
+        padding: 10px 10px;color: var(--akbColor);margin-bottom: 10px;
+        "></span>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <nav class="desccont">Avenue de la Mongala, Kinshasa, République démocratique du Congo</nav>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 mb-8" data-aos="fade-up" data-aos-delay="200">
+                    <div class="detail text-center" data-aos="zoom-in" data-aos-delay="300">
+                        <span class="far fa-envelope text-2xl p-4"></span>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <nav class="desccont"><a href="mailto:albertokamangob@gmail.com">albertokamangob@gmail.com</a>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 mb-8" data-aos="fade-up" data-aos-delay="300">
+                    <div class="detail text-center" data-aos="zoom-in" data-aos-delay="400">
+                        <span class="fa fa-phone text-2xl p-4"></span>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <nav class="desccont"><a href="tel:+243 812 839 927">+243 812 839 927</a></nav>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 mb-8" data-aos="fade-up" data-aos-delay="400">
+                    <div class="detail text-center" data-aos="zoom-in" data-aos-delay="500">
+                        <span class="fa fa-globe-africa text-2xl p-4" style="background-color: rgb(17, 21, 31);border-radius: 50%;
+        padding: 10px 10px;color: var(--akbColor);margin-bottom: 10px;"></span>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <nav class="desccont">www.akbdesign.go.yj.fr</nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="w-100 mt-6 pt-8 pb-6">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6">
+                    <nav class="text-center text-2xl">Optimus corp</nav>
+                    <p class="descfoot">
+                        Une entreprise innovatrice dans le domaine informatique, selon le plan du Chef de l'Etat qui est
+                        de
+                        <i>"Faire du Numérique congolais un levier d'intégration, de bonne gouvernance, de croissance
+                            économique et de progrès social"</i> a été explicitée dans le Plan National du Numérique
+                        (PNN); permet à chaque congolais et congolaise de suivre le rythme dans cette digitalisation qui
+                        s'etend dans tous les domaines d'activités, à travers d'un coté des sessions de formations
+                        particulières et flexibles sur la maitrise de
+                        l'outil informatique(outil de bureau, famille Microsoft Office) et d'autre coté, l'octroit de
+                        ses services à la transformation digitale des entreprises
+                        et des particuliers
+                    </p>
+                    <div class="social-link text-xl">
+                        <a href="https://www.facebook.com/profile.php?id=100067500410185"><span
+                                class="fab fa-facebook-square m-3"></span></a>
+                        <a href="https://instagram.com/optimus_corp?utm_medium=copy_link"><span
+                                class="fab fa-instagram m-3"></span></a>
+                        <a href="https://mobile.twitter.com/optimus_Corp28?s=09"><span
+                                class="fab fa-twitter m-3"></span></a>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
+                    <nav class="text-center text-2xl">Liens</nav>
+                    <p class="">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="#home" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Acceuil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#about" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Apropos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#experience" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Experiences</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#service" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#competence" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Compétence</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#realisation" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Réalisations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#client" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Partenairs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#temoignage" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Temoignages</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#contact" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Contact</a>
+                        </li>
+                    </ul>
+                    </p>
+                </div>
+                <div class="col-xl-4 col-lg-3 col-md-3 col-sm-3">
+                    <nav class="text-center text-2xl">Services</nav>
+                    <p>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="#service" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span> Montage
+                                vidéo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#service" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Flyers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#service" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span>
+                                Animation</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#service" class="nav-link"><span class="fa fa-long-arrow-alt-right"></span> Logo &
+                                Icons</a>
+                        </li>
+                    </ul>
+                    </p>
+                </div>
+                <div class=" copyr text-center pt-3 col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                    <p>&copy; Copyright <strong>Optimus corp</strong>. All Rights Reserved</p>
+                    <p>Designed by <a href="https://github.com/Geedoo-Kanda">KANDA GEEDOO</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <a href="#" class="retour-btn"><span class="fa fa-chevron-up"></span></a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
